--- a/index.html
+++ b/index.html
@@ -245,7 +245,31 @@
             </div>
         </div>
 
-        <div class="contact" id="contact"></div>
+        <div class="contact" id="contact">
+
+            <div class="contact-title">
+                <h2 class="section-title">Contact Us</h2>
+            </div>
+
+            <div class="contact-text">
+                <p>
+                    Let us know if you have any questions or suggestions. We'd love to hear from you!
+                </p>
+            </div>
+
+            <div class="contact-container">
+                <form action="">
+                    <input type="text" placeholder="Your Name">
+                    <input type="email" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                    <input type="submit" value="Send">
+                </form>
+            </div>
+        </div>
+
+        <footer>
+
+        </footer>
     </main>
 
     <footer></footer>
