--- a/index.html
+++ b/index.html
@@ -266,13 +266,53 @@
                 </form>
             </div>
         </div>
-
-        <footer>
-
-        </footer>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="footer-container">
+                <div class="footer-content">
+                    <h3>About</h3>
+                    <p>
+                        Fell free to contact us if you have any questions or suggestions.
+                    </p>
+                    <p>
+                        Follow us on social media:
+                    </p>
+                    <div class="footer-icons">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                    </div>
+                </div>
+
+                <div class="footer-link">
+                    <h3>Links</h3>
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-contact">
+                    <h3>Contact</h3>
+                    <p>
+                        Jl. Arcadia No. 123<br>
+                        Medan, Sumatera Utara (IDN)<br>
+                        +62 123 456 789
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="footer-copyright">
+                <p>&copy; 2023 Travelias. All rights reserved.</p>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
