--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
     <header>
 
         <div class="hero">
-            <img src="assets/images/logo-black.svg" alt="">
-            <h1>Welcome to Travelias</h1>
-            <p>Discover new destinations and experiences</p>
-            <br>
-            <a href="#about"><button>Learn More</button></a>
+            <div class="hero-container animate zoom-in-up">
+                <img src="assets/images/logo-black.svg" alt="">
+                <h1>Welcome to Travelias</h1>
+                <p>Discover new destinations and experiences</p>
+                <br>
+                <a href="#about"><button>Learn More</button></a>
+            </div>
         </div>
 
     </header>
@@ -61,8 +63,8 @@
     <main>
         <div class="about" id="about">
             <div class="about-container">
-                <div class="about-1"><img src="assets/images/logo-black.svg" alt=""></div>
-                <div class="about-2">
+                <div class="about-1 animate slide-right"><img src="assets/images/logo-black.svg" alt=""></div>
+                <div class="about-2 animate slide-left">
                     <h2 class="section-title">About us</h2>
                     <div class="about-text">
                         <p>
@@ -116,72 +118,81 @@
                 <h2 class="section-title">Our Services</h2>
             </div>
 
-            <div class="services-text">
+            <div class="services-text animate slide-right">
                 <p>
                     Explore the world with us and discover new destinations and experiences.
                 </p>
             </div>
             <div class="services-container">
-
-                <div class="services-card">
-                    <div class="service-box">
-                        <div class="box">
-                            <div class="service-card-img">
-                                <i class="fa-solid fa-plane"></i>
-                            </div>
-                            <div class="service-card-title">
-                                <h3>Travel</h3>
-                            </div>
-                            <div class="service-card-text">
-                                <p>
-                                    Embark on an extraordinary journey across continents, where every destination
-                                    becomes a chapter in your adventure story. Let us whisk you away to breathtaking
-                                    landscapes and vibrant cultures, creating memories that last a lifetime.
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="services-card">
-                    <div class="service-box">
-                        <div class="box">
-                            <div class="service-card-img">
-                                <i class="fa-solid fa-compass"></i>
-                            </div>
-                            <div class="service-card-title">
-                                <h3>Explore</h3>
-                            </div>
-                            <div class="service-card-text">
-                                <p>
-                                    Set out on an expedition of exploration, delving into the heart of diverse
-                                    landscapes and uncovering hidden treasures along the way. With our curated
-                                    experiences, you'll traverse uncharted territories and ignite your sense of wonder.
-                                </p>
+                <div class="services-animation animate slide-up">
+                    <div class="services-card">
+                        <div class="service-box">
+                            <div class="box">
+                                <div class="service-card-img">
+                                    <i class="fa-solid fa-plane"></i>
+                                </div>
+                                <div class="service-card-title">
+                                    <h3>Travel</h3>
+                                </div>
+                                <div class="service-card-text">
+                                    <p>
+                                        Embark on an extraordinary journey across continents, where every destination
+                                        becomes a chapter in your adventure story. Let us whisk you away to breathtaking
+                                        landscapes and vibrant cultures, creating memories that last a lifetime.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="services-card">
-                    <div class="service-box">
-                        <div class="box">
-                            <div class="service-card-img">
-                                <i class="fa-solid fa-magnifying-glass"></i>
-                            </div>
-                            <div class="service-card-title">
-                                <h3>Discover</h3>
-                            </div>
-                            <div class="service-card-text">
-                                <p>
-                                    Rediscover the joy of discovery as we guide you through enchanting locales and
-                                    unveil the rich tapestry of our world's heritage. From ancient ruins to modern
-                                    marvels, each destination offers a new perspective and a chance to connect with the
-                                    essence of travel.
-                                </p>
+                <div class="services-animation animate slide-up">
+                    <div class="services-card">
+                        <div class="service-box">
+                            <div class="box">
+                                <div class="service-card-img">
+                                    <i class="fa-solid fa-compass"></i>
+                                </div>
+                                <div class="service-card-title">
+                                    <h3>Explore</h3>
+                                </div>
+                                <div class="service-card-text">
+                                    <p>
+                                        Set out on an expedition of exploration, delving into the heart of diverse
+                                        landscapes and uncovering hidden treasures along the way. With our curated
+                                        experiences, you'll traverse uncharted territories and ignite your sense of
+                                        wonder.
+                                    </p>
+                                </div>
                             </div>
                         </div>
                     </div>
+                </div>
+
+
+                <div class="services-animation animate slide-up">
+                    <div class="services-card">
+                        <div class="service-box">
+                            <div class="box">
+                                <div class="service-card-img">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </div>
+                                <div class="service-card-title">
+                                    <h3>Discover</h3>
+                                </div>
+                                <div class="service-card-text">
+                                    <p>
+                                        Rediscover the joy of discovery as we guide you through enchanting locales and
+                                        unveil the rich tapestry of our world's heritage. From ancient ruins to modern
+                                        marvels, each destination offers a new perspective and a chance to connect with
+                                        the
+                                        essence of travel.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -192,57 +203,69 @@
                 <h2 class="section-title">Our Projects</h2>
             </div>
 
-            <div class="projects-text">
+            <div class="projects-text animate slide-right">
                 <p>
                     Explore the world with us and discover new destinations and experiences.
                 </p>
             </div>
 
             <div class="projects-container">
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="assets/images/scott.jpg" alt="">
+                <div class="project-animation animate zoom-in-up">
+                    <div class="project-card">
+                        <div class="project-img">
+                            <img src="assets/images/scott.jpg" alt="">
+                        </div>
+                        <div class="project-desc">
+                            <h3>Project 1</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium aliquid debitis,
+                                quibusdam incidunt quidem rerum.</p>
+                        </div>
                     </div>
-                    <div class="project-desc">
-                        <h3>Project 1</h3>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium aliquid debitis,
-                            quibusdam incidunt quidem rerum.</p>
-                    </div>
+
                 </div>
 
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="assets/images/scott.jpg" alt="">
+                <div class="project-animation animate zoom-in-up">
+                    <div class="project-card">
+                        <div class="project-img">
+                            <img src="assets/images/scott.jpg" alt="">
+                        </div>
+                        <div class="project-desc">
+                            <h3>Project 2</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto facilis numquam vitae quia
+                                rem recusandae nihil temporibus aut.</p>
+                        </div>
                     </div>
-                    <div class="project-desc">
-                        <h3>Project 2</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto facilis numquam vitae quia
-                            rem recusandae nihil temporibus aut.</p>
-                    </div>
+
                 </div>
 
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="assets/images/scott.jpg" alt="">
+                <div class="project-animation animate zoom-in-up">
+                    <div class="project-card">
+                        <div class="project-img">
+                            <img src="assets/images/scott.jpg" alt="">
+                        </div>
+                        <div class="project-desc">
+                            <h3>Project 3</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis aut accusantium a
+                                recusandae quis corrupti officia nobis.</p>
+                        </div>
                     </div>
-                    <div class="project-desc">
-                        <h3>Project 3</h3>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis aut accusantium a
-                            recusandae quis corrupti officia nobis.</p>
-                    </div>
+
                 </div>
 
-                <div class="project-card">
-                    <div class="project-img">
-                        <img src="assets/images/scott.jpg" alt="">
-                    </div>
-                    <div class="project-desc">
-                        <h3>Project 4</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorem tempore
-                            explicabo, impedit asperiores officia illo nemo inventore.</p>
+                <div class="project-animation animate zoom-in-up">
+                    <div class="project-card">
+                        <div class="project-img">
+                            <img src="assets/images/scott.jpg" alt="">
+                        </div>
+                        <div class="project-desc">
+                            <h3>Project 4</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorem tempore
+                                explicabo, impedit asperiores officia illo nemo inventore.</p>
+                        </div>
                     </div>
                 </div>
             </div>
+
         </div>
 
         <div class="contact" id="contact">
@@ -251,13 +274,13 @@
                 <h2 class="section-title">Contact Us</h2>
             </div>
 
-            <div class="contact-text">
+            <div class="contact-text animate slide-right">
                 <p>
                     Let us know if you have any questions or suggestions. We'd love to hear from you!
                 </p>
             </div>
 
-            <div class="contact-container">
+            <div class="contact-container animate slide-up">
                 <form action="">
                     <input type="text" placeholder="Your Name">
                     <input type="email" placeholder="Your Email">
