--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
         </label>
 
         <nav class="navbar">
-            <a href="#about" style="--i:0;">About</a>
-            <a href="#services" style="--i:1;">Services</a>
-            <a href="#projects" style="--i:2;">Projects</a>
-            <a href="#contact" style="--i:3;">Contact</a>
+            <a href="#" style="--i:0;">Home</a>
+            <a href="#about" style="--i:1;">About</a>
+            <a href="#services" style="--i:2;">Services</a>
+            <a href="#projects" style="--i:3;">Projects</a>
+            <a href="#contact" style="--i:4;">Contact</a>
         </nav>
     </div>
 
@@ -124,7 +125,7 @@
                 </p>
             </div>
             <div class="services-container">
-                <div class="services-animation animate slide-up">
+                <div class="services-animation animate zoom-in-right">
                     <div class="services-card">
                         <div class="service-box">
                             <div class="box">
@@ -146,7 +147,7 @@
                     </div>
                 </div>
 
-                <div class="services-animation animate slide-up">
+                <div class="services-animation animate zoom-in-right">
                     <div class="services-card">
                         <div class="service-box">
                             <div class="box">
@@ -170,7 +171,7 @@
                 </div>
 
 
-                <div class="services-animation animate slide-up">
+                <div class="services-animation animate zoom-in-right">
                     <div class="services-card">
                         <div class="service-box">
                             <div class="box">
@@ -312,6 +313,7 @@
                 <div class="footer-link">
                     <h3>Links</h3>
                     <ul>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#services">Services</a></li>
                         <li><a href="#projects">Projects</a></li>
