--- a/index.html
+++ b/index.html
@@ -29,25 +29,25 @@
 
 <body>
 
-    <div class="nav-container">
-        <a href="#" class="logo">travelias</a>
-
-        <input type="checkbox" id="check">
-        <label for="check" class="icons">
-            <i class="bx bx-menu" id="menu-icon"></i>
-            <i class="bx bx-x" id="close-icon"></i>
-        </label>
-
-        <nav class="navbar">
-            <a href="#" style="--i:0;">Home</a>
-            <a href="#about" style="--i:1;">About</a>
-            <a href="#services" style="--i:2;">Services</a>
-            <a href="#projects" style="--i:3;">Projects</a>
-            <a href="#contact" style="--i:4;">Contact</a>
-        </nav>
-    </div>
-
     <header>
+
+        <div class="nav-container">
+            <a href="#" class="logo">travelias</a>
+
+            <input type="checkbox" id="check">
+            <label for="check" class="icons">
+                <i class="bx bx-menu" id="menu-icon"></i>
+                <i class="bx bx-x" id="close-icon"></i>
+            </label>
+
+            <nav class="navbar">
+                <a href="#" style="--i:0;">Home</a>
+                <a href="#about" style="--i:1;">About</a>
+                <a href="#services" style="--i:2;">Services</a>
+                <a href="#projects" style="--i:3;">Projects</a>
+                <a href="#contact" style="--i:4;">Contact</a>
+            </nav>
+        </div>
 
         <div class="hero">
             <div class="hero-container animate zoom-in-up">
@@ -64,7 +64,9 @@
     <main>
         <div class="about" id="about">
             <div class="about-container">
-                <div class="about-1 animate slide-right"><img src="assets/images/logo-black.svg" alt=""></div>
+                <aside class="about-1 animate slide-right">
+                    <img src="assets/images/logo-black.svg" alt="">
+                </aside>
                 <div class="about-2 animate slide-left">
                     <h2 class="section-title">About us</h2>
                     <div class="about-text">
