feat: :art: semantic html

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <body>
 
     <header>
-
-        <div class="nav-container">
+        <nav class="nav-container">
             <a href="#" class="logo">travelias</a>
 
             <input type="checkbox" id="check">
@@ -47,29 +46,30 @@
                 <a href="#projects" style="--i:3;">Projects</a>
                 <a href="#contact" style="--i:4;">Contact</a>
             </nav>
-        </div>
+        </nav>
+    </header>
 
-        <div class="hero">
-            <div class="hero-container animate zoom-in-up">
+
+    <main>
+
+        <section class="hero">
+            <article class="hero-container animate zoom-in-up">
                 <img src="assets/images/logo-black.svg" alt="">
                 <h1>Welcome to Travelias</h1>
                 <p>Discover new destinations and experiences</p>
                 <br>
                 <a href="#about"><button>Learn More</button></a>
-            </div>
-        </div>
+            </article>
+        </section>
 
-    </header>
-
-    <main>
-        <div class="about" id="about">
+        <section class="about" id="about">
             <div class="about-container">
                 <aside class="about-1 animate slide-right">
                     <img src="assets/images/logo-black.svg" alt="">
                 </aside>
-                <div class="about-2 animate slide-left">
+                <section class="about-2 animate slide-left">
                     <h2 class="section-title">About us</h2>
-                    <div class="about-text">
+                    <article class="about-text">
                         <p>
                             Welcome to Travelias, where the world becomes your playground and exploration knows no
                             bounds.
@@ -109,17 +109,17 @@
                             Travelias be
                             your trusted companion on the journey of a lifetime.
                         </p>
-                    </div>
+                    </article>
 
                     <a href="#services" class="btn-start">Let's explore the world</a>
-                </div>
+                </section>
             </div>
-        </div>
+        </section>
 
-        <div class="services" id="services">
-            <div class="services-title">
+        <section class="services" id="services">
+            <header class="services-title">
                 <h2 class="section-title">Our Services</h2>
-            </div>
+            </header>
 
             <div class="services-text animate slide-right">
                 <p>
@@ -127,7 +127,7 @@
                 </p>
             </div>
             <div class="services-container">
-                <div class="services-animation animate zoom-in-right">
+                <article class="services-animation animate zoom-in-right">
                     <div class="services-card">
                         <div class="service-box">
                             <div class="box">
@@ -147,9 +147,9 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </article>
 
-                <div class="services-animation animate zoom-in-right">
+                <article class="services-animation animate zoom-in-right">
                     <div class="services-card">
                         <div class="service-box">
                             <div class="box">
@@ -170,10 +170,10 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </article>
 
 
-                <div class="services-animation animate zoom-in-right">
+                <article class="services-animation animate zoom-in-right">
                     <div class="services-card">
                         <div class="service-box">
                             <div class="box">
@@ -195,16 +195,16 @@
                             </div>
                         </div>
                     </div>
+                </article>
 
-                </div>
             </div>
-        </div>
+        </section>
 
-        <div class="projects" id="projects">
+        <section class="projects" id="projects">
 
-            <div class="projects-title">
+            <header class="projects-title">
                 <h2 class="section-title">Our Projects</h2>
-            </div>
+            </header>
 
             <div class="projects-text animate slide-right">
                 <p>
@@ -213,65 +213,65 @@
             </div>
 
             <div class="projects-container">
-                <div class="project-animation animate zoom-in-up">
+                <article class="project-animation animate zoom-in-up">
                     <div class="project-card">
-                        <div class="project-img">
+                        <figure class="project-img">
                             <img src="assets/images/scott.jpg" alt="">
-                        </div>
-                        <div class="project-desc">
+                        </figure>
+                        <figcaption class="project-desc">
                             <h3>Project 1</h3>
                             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Accusantium aliquid debitis,
                                 quibusdam incidunt quidem rerum.</p>
-                        </div>
+                        </figcaption>
                     </div>
 
-                </div>
+                </article>
 
-                <div class="project-animation animate zoom-in-up">
+                <article class="project-animation animate zoom-in-up">
                     <div class="project-card">
-                        <div class="project-img">
+                        <figure class="project-img">
                             <img src="assets/images/scott.jpg" alt="">
-                        </div>
-                        <div class="project-desc">
+                        </figure>
+                        <figcaption class="project-desc">
                             <h3>Project 2</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto facilis numquam vitae quia
                                 rem recusandae nihil temporibus aut.</p>
-                        </div>
+                        </figcaption>
                     </div>
 
-                </div>
+                </article>
 
-                <div class="project-animation animate zoom-in-up">
+                <article class="project-animation animate zoom-in-up">
                     <div class="project-card">
-                        <div class="project-img">
+                        <figure class="project-img">
                             <img src="assets/images/scott.jpg" alt="">
-                        </div>
-                        <div class="project-desc">
+                        </figure>
+                        <figcaption class="project-desc">
                             <h3>Project 3</h3>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Omnis aut accusantium a
                                 recusandae quis corrupti officia nobis.</p>
-                        </div>
+                        </figcaption>
                     </div>
 
-                </div>
+                </article>
 
-                <div class="project-animation animate zoom-in-up">
+                <article class="project-animation animate zoom-in-up">
                     <div class="project-card">
-                        <div class="project-img">
+                        <figure class="project-img">
                             <img src="assets/images/scott.jpg" alt="">
-                        </div>
-                        <div class="project-desc">
+                        </figure>
+                        <figcaption class="project-desc">
                             <h3>Project 4</h3>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis dolorem tempore
                                 explicabo, impedit asperiores officia illo nemo inventore.</p>
-                        </div>
+                        </figcaption>
                     </div>
-                </div>
+                </article>
             </div>
 
-        </div>
+        </section>
 
-        <div class="contact" id="contact">
+        <header class="contact" id="contact">
 
             <div class="contact-title">
                 <h2 class="section-title">Contact Us</h2>
@@ -291,13 +291,14 @@
                     <input type="submit" value="Send">
                 </form>
             </div>
-        </div>
+        </header>
     </main>
 
     <footer>
         <div class="container">
             <div class="footer-container">
-                <div class="footer-content">
+
+                <section class="footer-content">
                     <h3>About</h3>
                     <p>
                         Fell free to contact us if you have any questions or suggestions.
@@ -310,9 +311,9 @@
                         <i class="fab fa-twitter"></i>
                         <i class="fab fa-instagram"></i>
                     </div>
-                </div>
+                </section>
 
-                <div class="footer-link">
+                <section class="footer-link">
                     <h3>Links</h3>
                     <ul>
                         <li><a href="#">Home</a></li>
@@ -321,16 +322,16 @@
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
-                </div>
+                </section>
 
-                <div class="footer-contact">
+                <section class="footer-contact">
                     <h3>Contact</h3>
                     <p>
                         Jl. Arcadia No. 123<br>
                         Medan, Sumatera Utara (IDN)<br>
                         +62 123 456 789
                     </p>
-                </div>
+                </section>
 
             </div>
 
@@ -338,8 +339,8 @@
                 <p>&copy; 2023 Travelias. All rights reserved.</p>
             </div>
         </div>
-
     </footer>
+
 </body>
 
 </html>
